<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:background="@color/textColor"
    android:orientation="horizontal"
    tools:context=".GenreAndArtistTemplateActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/thumbnail_description"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/images" />

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/demo" />

        <TextView
            android:id="@+id/song_artist_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:text="@string/demoName" />
    </LinearLayout>

</RelativeLayout>
